Square alignment fixed

--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 #container {
-
+    display: flex;
+    flex-wrap: wrap;
+    width: 500px;
+    height: 500px;
+    /* background-color: red; */
 }
 
-
-
-
-
 .square {
-    background-color: black;
-    width: 50px;
-    height: 50px;
-    margin-top: 5px;
+    /* background-color: black; */
+    width: calc(100% / 16);
+    height: calc(100% / 16);
+    box-sizing: border-box;
+    border: 1px solid #000;
 }
